# rsperf

./: .gitignore  Cargo.toml  raw-client.json  raw-server.json  tcp-client.json  tcp-server.json  udp-server.json
.cargo/: config.toml
src/: c.rs  cli.rs  main.rs  message.rs  program.rs  test.rs  test_format.rs  transport.rs  transports.rs
src/test_format/: json.rs  pretty.rs
src/transports/: raw.rs  sockets.rs  tcp.rs  udp.rs  zero_copy.rs
src/transports/sockets/: dgram.rs
