[package]
name = "perf"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
colored = "2.0.4"
clap = { version = "4.3", features = ["derive"] }
snafu = { version = "0.7.5", features = ["backtraces", "backtraces-impl-std"] }

lazy_static = "1.4"
chrono = { version = "0.4.26", features = ["serde"] }
num-traits = "0.2"
ctrlc = "3.4.0"

libc = "0.2"
etherparse = "0.13.0"
sysinfo = "0.29"

serde = { version = "1.0.185", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
bincode = "1.3.3"

[[bin]]
name = "find_perf"
